# lab1

./: LICENSE  README.md  main.cpp
doc/: config
doc/html/: dir_000000_000008.html  dir_3020f57ed3a4097468c24b19d2822e36.html  dir_3d3169b6a92f607cccd9bcb81c81a5c2.html  dir_684fa5c5e4cabec14ab59e41caa6242f.html  dir_684fa5c5e4cabec14ab59e41caa6242f_dep.map  dir_684fa5c5e4cabec14ab59e41caa6242f_dep.md5  dir_6867267c58c0e93f5e89bf5fdcc84dbe.html  dir_8b5957e9d79c766422630c171461baa5.html  dir_a16aa8a87d526e34f1414b40d3c08ae5.html  dir_c84ad2fd4c163a64e980e099d7d99304.html  dir_cc1818e33bf60f9c51276e1c198fa354.html  dir_e7faffab0396833453cab1749f191b5b.html  files.html  funcs_8cpp.html  funcs_8cpp__incl.map  funcs_8cpp__incl.md5  funcs_8h.html  funcs_8h__dep__incl.map  funcs_8h__dep__incl.md5  funcs_8h_source.html  globals.html  globals_func.html  graph_legend.html  input_8cpp.html  input_8cpp__incl.map  input_8cpp__incl.md5  input_8h.html  input_8h__dep__incl.map  input_8h__dep__incl.md5  input_8h_source.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5
doc/html/search/: all_0.js  all_1.js  all_2.js  files_0.js  files_1.js  functions_0.js  (+2 more)
doc/latex/: files.tex  funcs_8cpp.tex  funcs_8cpp__incl.md5  funcs_8h.tex  funcs_8h__dep__incl.md5  input_8cpp.tex  input_8cpp__incl.md5  input_8h.tex  input_8h__dep__incl.md5  main_8cpp.tex  main_8cpp__incl.md5  refman.tex
lab/: CMakeLists.txt  main.cpp
lab/src/: coverage.html  funcs.cpp  funcs.h  input.cpp  input.h  tests-funcs.gcda  tests-funcs.gcno  tests-tests.gcda  tests.cpp
src/: funcs.cpp  funcs.h  input.cpp
